# sber-numerical-methods

./: readme.md
lectures_hw/1/: readme.md
lectures_hw/2/: readme.md
prac_hw/call-option/: .gitignore  CMakeLists.txt  call_option.py  call_options_mc.cpp  readme.md
prac_hw/float/: Makefile  accuracy.cpp  float  readme.md
prac_hw/logf/: .gitignore  Makefile  logf.cpp  logf_avx2.cpp  perftest.cpp  readme.md  test_logf.cpp  test_logf_avx2.cpp
prac_hw/matrix/: Makefile  matrix  matrix.cpp  readme.md
prac_hw/minstd-rand/: .gitignore  Makefile  minstd_rand  minstd_rand.cpp  readme.md
prac_hw/minstd_rand/: minstd_rand
prac_hw/monte-carlo/: monte_carlo.py  readme.md
prac_hw/perftest/: Makefile  perftest.cpp  readme.md
prac_hw/rng-test/: readme.md  rng_test.py
prac_hw/wiener-process/: readme.md  wiener.py
